--- a/src/app/cases/cases.component.html
+++ b/src/app/cases/cases.component.html
@@ -6,8 +6,8 @@
     </h1>
     <button mat-raised-button color="accent" (click)="showDialog()"><mat-icon>add</mat-icon> New Case</button>
 </div>
-<p-dialog header="Title" [(visible)]="display" [style]="{width: '50vw'}" [maximizable]="true">
-    Content
+<p-dialog header="Add Case" [(visible)]="display" [style]="{width: '80vw'}" [maximizable]="true">
+    <app-add-case></app-add-case>
 </p-dialog>
 <div >
     <p-dataView #dv [value]="legalCases" [paginator]="true" [rows]="9" filterBy="name" [sortField]="sortField"
