--- a/src/app/cases/add-case/add-case.component.html
+++ b/src/app/cases/add-case/add-case.component.html
@@ -1,57 +1,100 @@
-<!-- <div class="p-fluid p-formgrid p-grid">
-    <div class="p-field p-col-12 p-md-6">
-        <label for="firstname">Firstname</label>
-        <input id="firstname" type="text" pInputText>
-    </div>
-    <div class="p-field p-col-12 p-md-6">
-        <label for="lastname">Lastname</label>
-        <input id="lastname" type="text" pInputText>
-    </div>
-    <div class="p-field p-col-12">
-        <label for="address">Address</label>
-        <textarea id="address" type="text" rows="4" pInputTextarea></textarea>
-    </div>
-    <div class="p-field p-col-12 p-md-6">
-        <label for="city">City</label>
-        <input id="city" type="text" pInputText>
-    </div>
-    <div class="p-field p-col-12 p-md-3">
-        <label for="state">County</label>
-        <p-dropdown inputId="county" [options]="counties" [(ngModel)]="selectedCounty" placeholder="Select" optionLabel="name">
+<p-dialog #matterDialog [(visible)]="display"  [style]="{width: '80vw',margin: '0px 0px 0px 120px'}" [maximizable]="true" (onHide)="closeDialog.emit()">
+<ng-template pTemplate="header">
+<div>
+    <h1>Add Matter</h1>
+</div>
+</ng-template>
+<form (ngSubmit)="onSubmit()"  [formGroup]="matterForm" #matterFormRef>
+<div class="p-fluid p-formgrid p-grid mx-4 p-inputtext-sm">
+    <p-divider class="p-col-12">
+        <div class="p-d-inline-flex p-ai-center">
+            <i class="pi pi-user p-mr-2"></i>
+            <b>Case</b>
+        </div>
+    </p-divider>
+    <div class="p-field p-col-3">
+        <label for="caseType">Case Type  <span class="requiredLabel">*</span></label>
+        <p-dropdown id="caseType" formControlName="caseType" [options]="caseTypes" placeholder="Select" optionLabel="name">
         </p-dropdown>
     </div>
-    <div class="p-field p-col-12 p-md-3">
-        <label for="zip">Zip</label>
-        <input id="zip" type="text" pInputText>
+    <div class="p-field p-col-3">
+        <label for="defendantName">Main Defendant name  <span class="requiredLabel">*</span></label>
+        <input id="defendantName" formControlName="defendantName" type="text" pInputText>
+    </div>
+    <p-divider class="p-col-12">
+        <div class="p-d-inline-flex p-ai-center">
+            <i class="pi pi-user p-mr-2"></i>
+            <b>Property</b>
+        </div>
+    </p-divider>
+
+    <div class="p-field p-col-2">
+        <label for="streetNumber" color="primary">Number  <span class="requiredLabel">*</span></label>
+        <input id="streetNumber" formControlName="streetNumber" type="text" pInputText />
+    </div>
+    <div class="p-field p-col-10">
+        <label for="streetName">Street Name  <span class="requiredLabel">*</span></label>
+        <input id="streetName" formControlName="streetName" type="text" pInputText />
+    </div>
+    <div class="p-field p-col-3">
+        <label for="city">City  <span class="requiredLabel">*</span></label>
+        <p-dropdown id="city" formControlName="city" [options]="cities" placeholder="Select" optionLabel="name">
+        </p-dropdown>
+    </div>
+    <div class="p-field p-col-3">
+        <label for="state">County  <span class="requiredLabel">*</span></label>
+        <p-dropdown inputId="county" formControlName="county" [options]="counties"
+            placeholder="Select" optionLabel="name">
+        </p-dropdown>
+    </div>
+    <div class="p-field p-col-3">
+        <label for="state">State  <span class="requiredLabel">*</span></label>
+        <input id="state" formControlName="state" type="text" pInputText>
+    </div>
+    <div class="p-field p-col-3">
+        <label for="zip">Zip Code  <span class="requiredLabel">*</span></label>
+        <input id="zip" formControlName="zip" type="text" pInputText>
+    </div>
+    
+    <p-divider class="p-col-12">
+        <div class="p-d-inline-flex p-ai-center">
+            <i class="pi pi-user p-mr-2"></i>
+            <b>Client</b>
+        </div>
+    </p-divider>
+    <div class="p-field p-col-3">
+        <label for="clientCode">Client Code  <span class="requiredLabel">*</span></label>
+        <p-dropdown id="clientCode" formControlName="clientCode" [options]="clientCodes" placeholder="Select" optionLabel="name">
+        </p-dropdown>
+    </div>
+    <div class="p-field p-col-3">
+        <label for="clientLoanNumber">Client Loan #  <span class="requiredLabel">*</span></label>
+        <input id="clientLoanNumber" formControlName="clientLoanNumber" type="text" pInputText>
+    </div>
+    <p-divider class="p-col-12">
+        <div class="p-d-inline-flex p-ai-center">
+            <i class="pi pi-user p-mr-2"></i>
+            <b>Investor</b>
+        </div>
+    </p-divider>
+    <div class="p-field p-col-3">
+        <label for="investorCode">Investor Code  <span class="requiredLabel">*</span></label>
+        <p-dropdown id="investorCode" formControlName="investorCode" [options]="investorCodes" placeholder="Select"
+            optionLabel="name">
+        </p-dropdown>
+    </div>
+    <div class="p-field p-col-3">
+        <label for="investorLoanNumber">Investor Loan #  <span class="requiredLabel">*</span></label>
+        <input id="investorLoanNumber" formControlName="investorLoanNumber" type="text" pInputText>
     </div>
 </div>
-<div class="card">
-    <h5>Advanced</h5>
-    <div class="formgrid grid">
-        <div class="field col-12 md:col-6">
-            <label for="firstname6">Firstname</label>
-            <input id="firstname6" type="text" class="inputfield w-full">
-        </div>
-        <div class="field col-12 md:col-6">
-            <label for="lastname6">Lastname</label>
-            <input id="lastname6" type="text" class="inputfield w-full">
-        </div>
-        <div class="field col-12">
-            <label for="address">Address</label>
-            <textarea id="address" type="text" rows="4" class="inputfield w-full"></textarea>
-        </div>
-        <div class="field col-12 md:col-6">
-            <label for="city">City</label>
-            <input id="city" type="text" class="inputfield w-full">
-        </div>
-        <div class="field col-12 md:col-3">
-            <label for="state">State</label>
-            <select id="state" class="w-full inputfield" style="appearance: auto" options="counties">
-            </select>
-        </div>
-        <div class="field col-12 md:col-3">
-            <label for="zip">Zip</label>
-            <input id="zip" type="text" class="inputfield w-full">
-        </div>
+</form>
+<p-confirmDialog acceptButtonStyleClass="p-button-danger" rejectButtonStyleClass="p-button-primary" [style]="{width: '450px'}"></p-confirmDialog>
+
+<ng-template pTemplate="footer">
+    <div class="p-d-none p-d-md-inline-flex">
+        <button class="p-col-2" mat-raised-button color="warn" (click)="cancel()">Cancel</button>
+        <button class="p-col-2" [disabled]="matterForm.invalid" mat-raised-button color="primary" (click)="onSubmit()">Save</button>
     </div>
-</div> -->
+</ng-template>
+</p-dialog>
