--- a/src/app/cases/cases.component.scss
+++ b/src/app/cases/cases.component.scss
@@ -101,7 +101,10 @@
     }
   }
 }
-
+.case-dialog {
+  width: 400px;
+  margin-left: 120px;
+}
 .card {
   padding: 2rem;
   box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
