Added case start page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="h-100">
-    <mat-sidenav class="mat-elevation-z8 p-d-flex example-sidenav align-items-center text-center justify-content-between" role="navigation" #sidenav mode="side" opened fixedInViewport="true" >
+    <mat-sidenav class="mat-elevation-z8 p-d-flex example-sidenav align-items-center text-center justify-content-between m-2" role="navigation" #sidenav mode="side" opened fixedInViewport="true" >
         <a href="/" class=" text-decoration-none">
             <img src="/assets/images/RelegalLogo.png" class="logo" alt="Relegal">
             <span class="logo-text p-mx-auto">Relegal Solutions</span>
@@ -45,8 +45,8 @@
                 routerLinkActive="p-button-info"></button>
         </div>
     </mat-sidenav>
-    <mat-sidenav-content role="main" class="mat-elevation-z8" style="margin-left: 150px;">
-        <div  class="position-relative ml-5 mt-3" style="height: calc(100vh);" >
+    <mat-sidenav-content role="main" class="mat-elevation-z8" style="margin-left: 138px; background: white;">
+        <div  class="position-relative" style="height: 100%;" >
             <router-outlet></router-outlet>
         </div>
         </mat-sidenav-content>
