--- a/src/app/cases/start-case/start-case.component.html
+++ b/src/app/cases/start-case/start-case.component.html
@@ -1,6 +1,98 @@
-<mat-sidenav-container class="example-container">
-  <mat-sidenav opened mode="side">Start content</mat-sidenav>
-  <mat-sidenav opened mode="side" position="end">End content</mat-sidenav>
-  Implicit main content
-  <p>start-case works!</p>
-</mat-sidenav-container>
+<!--<section class="pb-0 pb-4 d-flex h-100" style="background-color: #CCCEDB;">-->
+  <!--<div class="container login-section align-self-center" >-->
+    <!--<ng-container>-->
+      <!--<div class="row align-items-center no-gutters">-->
+
+      <!--</div>-->
+    <!--</ng-container>-->
+  <!--</div>-->
+<!--</section>-->
+<!--<div class="d-flex justify-content-between align-items-center p-4 my-0">-->
+  <!--<h1 class="my-0">Case # {{CaseId}}</h1>-->
+  <!--&lt;!&ndash;<h1 class="my-0 font-weight-bold">File Information Form</h1>&ndash;&gt;-->
+  <!--<button mat-raised-button color="accent" >Document Manager</button>-->
+<!--</div>-->
+<div class="position-relative mr-4 my-2 mb-4" style="height: calc(100% - 16px)">
+  <mat-sidenav-container class="example-container rounded-lg">
+    <mat-sidenav #letNav opened mode="side" class="rounded-lg border-0">
+      <mat-selection-list #stages [multiple]="false" class="mt-7">
+        <div *ngFor="let item of leftSideItems">
+          <mat-list-option  [value]="item" selected="{{item === 'Case Info' ? true : false}}" (click)="leftSideChange(item)" class="border-bottom">
+            {{item}}
+          </mat-list-option>
+
+        </div>
+
+      </mat-selection-list>
+    </mat-sidenav>
+    <mat-sidenav #rightNav opened="{{rightNavOpenStatus}}" mode="side" position="end" class="rounded-lg border-0" style="background: white; margin-top: 36px;">
+      <!--<mat-selection-list #stages [multiple]="false">-->
+        <!--<mat-list-option *ngFor="let item of rightSideItems" [value]="item" selected="{{item === 'Referral Received' ? true : false}}" (click)="rightSideChange(item)">-->
+          <!--{{item}}-->
+        <!--</mat-list-option>-->
+      <!--</mat-selection-list>-->
+      <p-timeline [value]="rightEvents1" align="left" styleClass="customized-timeline">
+        <ng-template pTemplate="marker" let-event>
+          <button pButton pRipple label="{{event.icon}}" [disabled]="!event.date" class="custom-marker p-shadow-2" [style.backgroundColor]="event.color" (click)="rightSideChange(event.status)"></button>
+        </ng-template>
+        <ng-template pTemplate="content" let-event>
+          <div class="custom-class" *ngIf="toggle">
+            <span class="d-inline-block mb-2" [style.color]="event.color">{{event.status}}</span>
+            <span class="font-weight-normal d-block mb-2" style="font-size: 0.875rem; color: rgba(0, 0, 0, 0.6);">{{event.date}}</span>
+          </div>
+        </ng-template>
+      </p-timeline>
+    </mat-sidenav>
+    <div class="d-flex justify-content-between px-2 mt-2">
+      <button mat-icon-button class="menubutton" (click)="letNav.toggle()">
+        <mat-icon >menu</mat-icon>
+      </button>
+      <!--<button mat-icon-button class="menubutton" (click)="toggle">-->
+        <!--<mat-icon >menu</mat-icon>-->
+      <!--</button>-->
+      <!--<button pButton pRipple label="button" class="custom-marker p-shadow-2"></button>-->
+      <!--<button pButton pRipple label="button" class="custom-marker p-shadow-2"></button>-->
+    </div>
+    <div *ngIf="rightNavOpenStatus && rightSelectedItem">
+      <p-tabView [(activeIndex)]="activeTabIndex" class="w-100 py-2" >
+        <ng-container *ngFor="let item of tabs[rightSelectedItem]; let i = index;">
+          <p-tabPanel [header]="item" [selected]="(i == 0) ? true : false">
+            <ng-template pTemplate = "content">
+              <div class="px-2">
+                {{rightSelectedItem}} Content 1
+              </div>
+            </ng-template>
+          </p-tabPanel>
+        </ng-container>
+      </p-tabView>
+    </div>
+    <ng-template [ngIf]="leftSelectedItem === 'Case Info'">
+      <div class="p-4 mt-1">{{leftSelectedItem}}   Content</div>
+    </ng-template>
+    <ng-template [ngIf]="leftSelectedItem === 'File History'">
+      <div class="p-4 mt-1">{{leftSelectedItem}}   Content</div>
+    </ng-template>
+    <ng-template [ngIf]="leftSelectedItem === 'Comments'">
+      <div class="p-4 mt-1">{{leftSelectedItem}}   Content</div>
+    </ng-template>
+    <ng-template [ngIf]="leftSelectedItem === 'Court Dates'">
+      <div class="p-4 mt-1">{{leftSelectedItem}}   Content</div>
+    </ng-template>
+    <ng-template [ngIf]="leftSelectedItem === 'Parties'">
+      <div class="p-4 mt-1">{{leftSelectedItem}}   Content</div>
+    </ng-template>
+    <ng-template [ngIf]="leftSelectedItem === 'Loan/Property Info'">
+      <div class="p-4 mt-1">{{leftSelectedItem}}   Content</div>
+    </ng-template>
+    <ng-template [ngIf]="leftSelectedItem === 'Ledger Details'">
+      <div class="p-4 mt-1">{{leftSelectedItem}}   Content</div>
+    </ng-template>
+
+    <!--<p>start-case works!</p>-->
+    <!--&lt;!&ndash;<p-tabMenu [model]="items"></p-tabMenu>&ndash;&gt;-->
+
+    <!--<p>-->
+      <!--&lt;!&ndash;Option selected: {{stages.selectedOptions.selected[0]?.value}}&ndash;&gt;-->
+    <!--</p>-->
+  </mat-sidenav-container>
+</div>
