--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -24,14 +24,14 @@
               </div>
               <div class="mb-3">
                 <label for="password1" class="block text-900 font-medium mb-2">Login as</label>
-                <p-dropdown [options]="legalTypes" [(ngModel)]="role" placeholder="Select " formControlName="role"
+                <p-dropdown [options]="legalTypes" placeholder="Select " formControlName="role"
                   optionLabel="name" optionValue="name" [showTransitionOptions]="'0ms'" [hideTransitionOptions]="'0ms'"
                   class="w-full mb-3"></p-dropdown>
               </div>
   
               <div class="flex align-items-center justify-content-between mb-6">
                 <div class="flex align-items-center">
-                  <p-checkbox inputId="rememberMe1" [binary]="true" [(ngModel)]="checked" formControlName="rememberMe"
+                  <p-checkbox inputId="rememberMe1" [binary]="true" formControlName="rememberMe"
                     styleClass="mr-2">Remember me</p-checkbox>
                   <label for="rememberMe1">Remember me</label>
                 </div>
