--- a/src/app/cases/add-case/add-case.component.html
+++ b/src/app/cases/add-case/add-case.component.html
@@ -5,7 +5,7 @@
 </div>
 </ng-template>
 <form (ngSubmit)="onSubmit()"  [formGroup]="matterForm" #matterFormRef>
-<div class="p-fluid p-formgrid p-grid mx-4 p-inputtext-sm">
+<div class="p-fluid p-formgrid p-grid mx-4">
     <p-divider class="p-col-12">
         <div class="p-d-inline-flex p-ai-center">
             <i class="pi pi-user p-mr-2"></i>
