--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,44 +1,44 @@
-<section class="pb-0 pb-4 d-flex h-100" style="background-color: #CCCEDB;">
+<section class="pb-0 pb-4 p-d-flex h-100" style="background-color: #CCCEDB;">
   <div class="container login-section align-self-center" >
     <ng-container>
-      <div class="row align-items-center no-gutters">
-        <div class="col-12 px-2 md-border-l">
-          <div class="text-center mb-5">
-            <!--<img src="assets/images/RelegalLogo.png" alt="Image" height="100" class="mb-3">-->
-            <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
-            <!--<span class="text-600 font-medium line-height-3">Don't have an account?</span>-->
-            <!--<a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>-->
+      <div class="p-row p-ai-center no-gutters">
+        <div class="p-col-12 px-2 md-border-l">
+          <div class="text-center">
+            <img src="assets/images/RelegalLogo1.png" alt="Image" height="60" class="mb-3">
+           
+            <h2 color="secondary">Welcome Back</h2>
           </div>
-          <div>
+          <div class="p-fluid p-formgrid p-grid p-ai-center p-jc-center">
             <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-              <div class="input-field">
-                <label for="email1" class="input-title block text-900 font-medium mb-2">Email</label>
+              <div class="input-field p-field">
+                <label for="email1" class="input-title">Email</label>
                 <input id="email1" type="text" pInputText formControlName="username" autocomplete="none"
                   [class.error]="username.touched && (username.invalid)"
                   [class.verified]="username.valid && username.touched" placeholder="jane.doe@relegal.com"
                   class="w-full mb-3">
               </div>
-              <div>
-                <label for="password1" class="block text-900 font-medium mb-2">Password</label>
+              <div class="input-field p-field">
+                <label for="password1" class="input-title">Password</label>
                 <input id="password1" type="password" pInputText formControlName="password" class="w-full mb-3">
               </div>
-              <div class="mb-3">
-                <label for="password1" class="block text-900 font-medium mb-2">Login as</label>
+              <div class="mb-3" class="input-field p-field">
+                <label for="password1" class="input-title">Login as</label>
                 <p-dropdown [options]="legalTypes" placeholder="Select " formControlName="role"
                   optionLabel="name" optionValue="name" [showTransitionOptions]="'0ms'" [hideTransitionOptions]="'0ms'"
                   class="w-full mb-3"></p-dropdown>
               </div>
   
-              <div class="flex align-items-center justify-content-between mb-6">
+              <div class="p-dflex p-ai-center p-jc-between mb-6">
                 <div class="flex align-items-center">
                   <p-checkbox inputId="rememberMe1" [binary]="true" formControlName="rememberMe"
                     styleClass="mr-2">Remember me</p-checkbox>
-                  <label for="rememberMe1">Remember me</label>
+                  <label for="rememberMe1" class="input-title">Remember me</label>
                 </div>
                 <!--<a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>-->
               </div>
               <button pButton pRipple label="Sign In" icon="pi pi-user" [loading]="isLoading"
-                [disabled]="loginForm.invalid" class="w-full"></button>
+              [disabled]="loginForm.invalid"
+               class="p-button-primary"></button>
             </form>
           </div>
         </div>
