--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,5 +1,5 @@
 .login-section {
-  background-color: #f4f4f4;
+  background-color: white;
   border: 1px solid #f1f0f4;
   box-sizing: border-box;
   box-shadow: 0px 3px 6px rgba(14, 7, 60, 0.08),
@@ -8,6 +8,16 @@
   padding-top: 3rem;
   padding-bottom: 3rem;
   max-width: 510px;
+}
+.p-button.p-button-primary {
+  background-color: #003050;
+}
+.p-button.p-button-secondary {
+  background-color: #8c632e;
+}
+.input-title {
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .type-heading-2 {
