--- a/src/app/login/users/users.component.scss
+++ b/src/app/login/users/users.component.scss
@@ -42,6 +42,9 @@
   .p-button.p-button-primary {
     background-color: #003050;
   }
+  .p-button.p-fileupload-choose {
+    background-color: #003050;
+  }
   .p-button.p-button-secondary {
     background-color: #8c632e;
   }
